--- a/app/views/irm/menus/index.html.erb
+++ b/app/views/irm/menus/index.html.erb
@@ -19,17 +19,16 @@
       <div class="pbBody">
         <div id="menus_list" class="datatable" style="width:100%">
           <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>&nbsp;
-            <%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
+            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>|<%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
           </div>
           <div id="status_code" style="display:none">
             <%= check_img("{status_code}") %>
           </div>                
         </div>
         <%= datatable("menus_list",{:action=>"get_data",:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "80px"},
-                       {:key=>"code",:label=>t(:label_irm_menu_menu_code), :width => "20%",:searchable=>true},
-                       {:key=>"name",:label=>t(:label_irm_menu_name), :width => "25%",:searchable=>true},
+                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "70px"},
+                       {:key=>"code",:label=>t(:label_irm_menu_menu_code), :width => "180px",:searchable=>true},
+                       {:key=>"name",:label=>t(:label_irm_menu_name), :width => "180px",:searchable=>true},
                        {:key=>"description",:label=>t(:label_irm_menu_description)},
                        {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}],
                        {:search_box=>"menusSearchBox",:paginator_perpage=>false,:paginator_box=>"menusPaginatorBox"}) %>
