--- a/app/views/irm/menus/_edit_form.html.erb
+++ b/app/views/irm/menus/_edit_form.html.erb
@@ -32,7 +32,7 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_menu_menu_code)%></label></td>
-              <td class="dataCol"><%= @menu.menu_code%></td>
+              <td class="dataCol"><%= @menu.code%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
