--- a/app/views/irm/menus/_new_form.html.erb
+++ b/app/views/irm/menus/_new_form.html.erb
@@ -32,7 +32,7 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_menu_menu_code)%></label></td>
-              <td class="dataCol"><%= f.text_field :menu_code, :required => true%></td>
+              <td class="dataCol"><%= f.text_field :code, :required => true,:irm_uppercase=>true%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
