--- a/app/views/irm/menus/show.html.erb
+++ b/app/views/irm/menus/show.html.erb
@@ -1,4 +1,4 @@
-<%= setting_show_title( :show_data => @menu.code) %>
+<%= setting_show_title( :show_data => @menu[:name]) %>
 <div id="ep" class="detail-block page-block">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
