--- a/app/views/irm/functions/show.html.erb
+++ b/app/views/irm/functions/show.html.erb
@@ -20,7 +20,7 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_function_function_code)%></label></td>
-              <td class="data2Col"><div><%= @function.function_code%></div></td>
+              <td class="data2Col"><div><%= @function.code%></div></td>
             </tr>        
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_function_name)%></label></td>
