fixed: 修正session timeout 退出后所引起的再次登录非正常退出

--- a/app/views/irm/common/_app_session_check.html.erb
+++ b/app/views/irm/common/_app_session_check.html.erb
@@ -78,7 +78,7 @@
       }
   }
   //离开当前窗口（刷新或者离开）关闭弹出窗口
-  parentWindow.onunload=function(){
+  window.onunload=function(){
       closePopup();
   }
 </script>
