修正task template页面上的bug

--- a/app/views/chm/change_approvals/approve.html.erb
+++ b/app/views/chm/change_approvals/approve.html.erb
@@ -1,4 +1,4 @@
-<%= common_title %>
+<%= common_title({:action_meaning=>"",:action_meaning=>t(:label_chm_change_approval), :buttons => ""}) %>
 
 <style type="text/css">
   #baseInfoSubPageBlockHeader{
