Feature #774 对知识添加审核功能

--- a/app/views/skm/entry_headers/_data_grid.html.erb
+++ b/app/views/skm/entry_headers/_data_grid.html.erb
@@ -11,10 +11,7 @@
                                        :id => "full_search"} %>
               </td>
               <td id="topButtonRow" class="pbButton">
-                  <div class="button-group">
-                    <div class="button selected"><%= link_to(t(:label_skm_entry_header_index), {}, {:href => "javascript:void(0)"})%></div>
-                    <div class="button"><%= link_to(t(:label_action_my_favorites), {:action=>"my_favorites"})%></div>
-                  </div>
+                <%=render "tab_buttons" %>
               </td>
               <td class="pbHelp">
                 <div id="entryHeadersSearchBox"></div>
