--- a/app/views/skm/entry_headers/my_unpublished.html.erb
+++ b/app/views/skm/entry_headers/my_unpublished.html.erb
@@ -6,7 +6,7 @@
         <table cellpadding="0" cellspacing="0" border="0">
           <tbody>
             <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_skm_entry_header_my_favorites_list) %></h2></td>
+              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_skm_entry_header_my_unpublished_list) %></h2></td>
               <td id="topButtonRow" class="pbButton">
                 <%=render "tab_buttons" %>
               </td>
@@ -21,7 +21,7 @@
           <tr>
             <td>
               <%= render :partial =>"/irm/common/tree_sidebar", :locals =>{:tree_url => url_for(:controller => "skm/columns", :action=>"get_columns_data", :access => "current", :format=>:json),
-                                                             :target_table => "favorites_list",
+                                                             :target_table => "my_unpublished_list",
                                                              :tree_id => "tree-div",
                                                              :title => t(:label_skm_column),
                                                              :root_text => t(:label_skm_column_all),
@@ -29,9 +29,9 @@
                                                              :url_param_name => 'column_id'} %>
             </td>
             <td>
-                <div id="favorites_list" class="datatable" style="width:100%">
+                <div id="my_unpublished_list" class="datatable" style="width:100%">
                   <div id="id" style="display:none">
-                    <%= link_to(t(:remove_from_favorite), {:controller => "skm/entry_headers", :action=>"remove_favorite",:person_id=>Irm::Person.current.id, :entry_header_id => "{id}"},:confirm => t(:label_are_you_sure)) %>
+                    <%= link_to(t(:edit),{:controller => "skm/entry_headers", :action=>"edit",:id=>"{id}"}) %>
                   </div>
                   <div id="entry_title" style="display:none">
                     var title = '<%= link_to("{entry_title}",{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>';
@@ -48,14 +48,16 @@
                     <%= link_to("{doc_number}",{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>
                   </div>
                 </div>
-                <%= datatable("favorites_list",{:action=>"my_favorites_data",:column_id => @column_id,:format=>"json", :person_id => Irm::Person.current.id},
+                <%= datatable("my_unpublished_list",{:action=>"my_unpublished_data",:column_id => @column_id,:format=>"json", :person_id => Irm::Person.current.id},
                           [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"60px"},
-                           {:key=>"published_date_f",:label=>t(:label_skm_entry_header_published_date), :width => "130px"},
+                           {:key=>"published_date",:label=>t(:label_skm_entry_header_published_date), :width => "150px"},
+                           {:key=>"doc_number",:label=>t(:label_skm_entry_header_doc_number),:formatter=>"Y.irm.template", :width => "100px"},
                            {:key=>"entry_title",:label=>t(:label_skm_entry_header_title),:formatter=>"Y.irm.stemplate"},
                            {:key=>"type_code", :hidden => true},
-                           {:key=>"doc_number",:label=>t(:label_skm_entry_header_doc_number),:formatter=>"Y.irm.template", :width => "100px"},
-                           ],{:html=>true, :paginator_box=>"favorites_list_paginator_box"})%>
-                <div id="favorites_list_paginator_box"></div>
+
+                           {:key=>"entry_status_name",:label=>t(:label_skm_entry_header_status_code),:width=>"70px"}
+                           ],{ :paginator_box=>"my_unpublished_list_paginator_box"})%>
+                <div id="my_unpublished_list_paginator_box"></div>
             </td>
           </tr>
         </table>
