--- a/app/views/skm/settings/index.html.erb
+++ b/app/views/skm/settings/index.html.erb
@@ -16,12 +16,12 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
-            <% @settings.each do |t| %>
+
             <tr>
-              <td class="labelCol"><label><%= t[0]%></label></td>
-              <td class="data2Col"><%= check_img(t[3])%></td>
+              <td class="labelCol"><label><%= @settings.query_by_code("SKM_HEADER_AUDIT").first[:name]%></label></td>
+              <td class="data2Col"><%= check_img(@settings.query_by_code("SKM_HEADER_AUDIT").first[:value])%></td>
             </tr>
-            <% end %>
+
         </tbody>
       </table>
     </div>
